2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h (EXCEPTION_INFO_PRINTF): Clean up output.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* futex.h [! RM_INTERN]: Include <errno.h>.
	(futex_wait): On error, set ERRNO and return -1.
	(futex_timed_wait): Likewise.
	(futex_wake): Likewise.
	* mutex.h (ss_mutex_lock): If FUTEX_WAIT returns failure, print
	some debugging information.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* lock.h (SS_MUTEX_LOCK, SS_MUTEX_LOCK_WAIT, SS_MUTEX_UNLOCK,
	SS_MUTEX_TRYLOCK, SS_MUTEX_TRYLOCK_BLOCKED, SS_RMUTEX_LOCK,
	SS_RMUTEX_LOCK_INC, SS_RMUTEX_LOCK_WAIT, SS_RMUTEX_UNLOCK,
	SS_RMUTEX_UNLOCK_DEC, SS_RMUTEX_TRYLOCK, SS_RMUTEX_TRYLOCK_INC,
	SS_RMUTEX_TRYLOCK_BLOCKED) [NDEBUG]: Also define in this case.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* thread.h (struct exception_frame): Make regs elements large.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_cap_rubout): Define.
	(cap_rubout): New method.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_object_type): Correctly bound-check OBJECT.
	(folio_object_type_set): Likewise.
	(folio_object_policy): Likewise.
	(folio_object_policy_set): Likewise.
	(folio_object_wait_queue_p): Likewise.
	(folio_object_wait_queue_p_set): Likewise.
	(folio_object_wait_queue): Likewise.
	(folio_object_wait_queue_set): Likewise.
	(folio_object_version): Likewise.
	(folio_object_version_set): Likewise.
	(folio_object_content): Likewise.
	(folio_object_content_set): Likewise.
	(folio_object_discarded): Likewise.
	(folio_object_discarded_set): Likewise.
	(folio_object_referenced): Likewise.
	(folio_object_referenced_set): Likewise.
	(folio_object_dirty): Likewise.
	(folio_object_dirty_set): Likewise.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h (EXCEPTION_INFO_FMT): New define.
	(EXCEPTION_INFO_PRINTF): Likewise.

2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* cap.h (as_dump_from): Remove declaration.
