@@ -1,6 +1,12 @@
 2008-06-23  Neal H. Walfield  <neal@gnu.org>
 
-	* profile.c (profile_end): Only deump profile statistics every
+	* activity.h (LIST_CLASS_TYPE): Add field priorities_count.
+	* activity.c (activity_destroy) [! NDEBUG]: Update
+	VICTIM->PARENT->PRIORITIES_COUNT.
+
+2008-06-23  Neal H. Walfield  <neal@gnu.org>
+
+	* profile.c (profile_end): Only dump profile statistics every
 	100000 samples if the debug output level is or exceeds 5.
 	(profile_stats_dump): When printing the per-call time, also print
 	the first digit after the period.
